--- a/UnitTestingByExample/Base.lproj/Main.storyboard
+++ b/UnitTestingByExample/Base.lproj/Main.storyboard
@@ -88,6 +88,9 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="Button"/>
+                                <connections>
+                                    <action selector="buttonTap" destination="AVX-Zq-CGy" eventType="touchUpInside" id="PpX-DR-tIp"/>
+                                </connections>
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="bjr-CW-iyc"/>
