--- a/UnitTestingByExample/Base.lproj/Main.storyboard
+++ b/UnitTestingByExample/Base.lproj/Main.storyboard
@@ -206,7 +206,6 @@
         <!--Navigation Controller-->
         <scene sceneID="Di5-3E-Ooo">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Hpa-Qq-JxN" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
                 <navigationController id="K84-Bj-Y8P" sceneMemberID="viewController">
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="o3n-Ut-0bl">
                         <rect key="frame" x="0.0" y="59" width="393" height="44"/>
@@ -216,6 +215,7 @@
                         <segue destination="bke-ei-Ouv" kind="relationship" relationship="rootViewController" id="HR5-IW-qNS"/>
                     </connections>
                 </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Hpa-Qq-JxN" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-520" y="1327"/>
         </scene>
@@ -249,6 +249,47 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4LL-pb-bMP" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1998" y="1327"/>
+        </scene>
+        <!--User Defaults View Controller-->
+        <scene sceneID="2vx-re-rS9">
+            <objects>
+                <viewController storyboardIdentifier="UserDefaultsViewController" id="r3J-4b-XdJ" customClass="UserDefaultsViewController" customModule="UnitTestingByExample" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="8Hb-zO-dsf">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ude-6y-iaa">
+                                <rect key="frame" x="191" y="209" width="11" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nSo-NG-KQv">
+                                <rect key="frame" x="162" y="423.66666666666669" width="69" height="30"/>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                <state key="normal" title="Increment"/>
+                                <connections>
+                                    <action selector="incrementButtonTapped" destination="r3J-4b-XdJ" eventType="touchUpInside" id="SRV-fb-LTM"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="u0c-Ft-IqP"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="nSo-NG-KQv" firstAttribute="centerY" secondItem="u0c-Ft-IqP" secondAttribute="centerY" id="79k-th-4xC"/>
+                            <constraint firstItem="ude-6y-iaa" firstAttribute="centerX" secondItem="u0c-Ft-IqP" secondAttribute="centerX" id="Sj2-9y-rPx"/>
+                            <constraint firstItem="ude-6y-iaa" firstAttribute="top" secondItem="u0c-Ft-IqP" secondAttribute="top" constant="150" id="ne1-Wz-t94"/>
+                            <constraint firstItem="nSo-NG-KQv" firstAttribute="centerX" secondItem="u0c-Ft-IqP" secondAttribute="centerX" id="q1o-Q6-fc8"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="counterLabel" destination="ude-6y-iaa" id="nd9-5m-9hJ"/>
+                        <outlet property="incrementButton" destination="nSo-NG-KQv" id="DLw-Kr-H8c"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="0by-iN-Tvh" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-521" y="2160"/>
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
