--- a/UnitTestingByExample/Base.lproj/Main.storyboard
+++ b/UnitTestingByExample/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="b40-3B-wmn">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Nfs-2Y-leS">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
@@ -393,6 +393,51 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="vWZ-iJ-Nvz" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-541" y="4259"/>
+        </scene>
+        <!--Snapshot View Controller-->
+        <scene sceneID="rqV-6h-Iyd">
+            <objects>
+                <viewController storyboardIdentifier="SnapshotViewController" id="Nfs-2Y-leS" customClass="SnapshotViewController" customModule="UnitTestingByExample" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="pix-Hm-YHL">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bWP-Yu-hyI">
+                                <rect key="frame" x="20.000000000000004" y="79" width="41.333333333333343" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="fdK-Li-tR7">
+                                <rect key="frame" x="18" y="100" width="357" height="31"/>
+                            </slider>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eD5-qr-pR3">
+                                <rect key="frame" x="298" y="150" width="75" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="1Dh-vf-ZYi"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Button"/>
+                            </button>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="Bt9-LY-xYv"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="Bt9-LY-xYv" firstAttribute="trailing" secondItem="fdK-Li-tR7" secondAttribute="trailing" constant="20" id="2QQ-x8-brJ"/>
+                            <constraint firstItem="fdK-Li-tR7" firstAttribute="top" secondItem="bWP-Yu-hyI" secondAttribute="bottom" id="531-8y-KIf"/>
+                            <constraint firstItem="bWP-Yu-hyI" firstAttribute="leading" secondItem="Bt9-LY-xYv" secondAttribute="leading" constant="20" id="75o-dn-Apv"/>
+                            <constraint firstItem="Bt9-LY-xYv" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="bWP-Yu-hyI" secondAttribute="trailing" constant="10" id="7hW-Kb-FBB"/>
+                            <constraint firstItem="fdK-Li-tR7" firstAttribute="leading" secondItem="Bt9-LY-xYv" secondAttribute="leading" constant="20" id="JMq-al-CQP"/>
+                            <constraint firstItem="Bt9-LY-xYv" firstAttribute="trailing" secondItem="eD5-qr-pR3" secondAttribute="trailing" constant="20" id="NUp-b3-b9I"/>
+                            <constraint firstItem="eD5-qr-pR3" firstAttribute="top" secondItem="fdK-Li-tR7" secondAttribute="bottom" constant="20" id="dX4-6g-Fmp"/>
+                            <constraint firstItem="eD5-qr-pR3" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="Bt9-LY-xYv" secondAttribute="leading" priority="250" constant="20" id="exo-PA-2gn"/>
+                            <constraint firstItem="bWP-Yu-hyI" firstAttribute="top" secondItem="Bt9-LY-xYv" secondAttribute="top" constant="20" id="hco-Ht-DZj"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="j1W-mF-cSk" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-564" y="4944"/>
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
